kubernetes/apps/infrastructure/longhorn/base/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: longhorn-gateway
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: cert-manager-prd
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      hostname: longhorn.decort.tech
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      hostname: longhorn.decort.tech
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: longhorn-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-route-redirect
  namespace: longhorn-system
spec:
  parentRefs:
    - name: longhorn-gateway
      namespace: longhorn-system
      sectionName: http
  hostnames:
    - "longhorn.decort.tech"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-route
  namespace: longhorn-system
spec:
  parentRefs:
    - name: longhorn-gateway
      namespace: longhorn-system
      sectionName: https
  hostnames:
    - "longhorn.decort.tech"
  rules:
    - backendRefs:
        - name: longhorn-frontend
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
